Tradução do inglês para o porgtuguês (BR)

--- a/Views/Corretoras/Details.cshtml
+++ b/Views/Corretoras/Details.cshtml
@@ -3,22 +3,24 @@
 @{
     ViewData["Title"] = "Details";
 }
+<div class="container">
 
-<h1>Detalhes</h1>
+    <h1>Detalhes</h1>
 
-<div>
-    <h4>Corretora</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Descricao)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Descricao)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Voltar para  a Lista</a>
+    <div>
+        <h4>Corretora</h4>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Descricao)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Descricao)
+            </dd>
+        </dl>
+    </div>
+    <div>
+        <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+        <a asp-action="Index">Voltar para  a Lista</a>
+    </div>
 </div>
