--- a/Views/Proventos/Details.cshtml
+++ b/Views/Proventos/Details.cshtml
@@ -3,42 +3,44 @@
 @{
     ViewData["Title"] = "Details";
 }
+<div class="container">
 
-<h1>Detalhes</h1>
+    <h1>Detalhes</h1>
 
-<div>
-    <h4>Provento</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DataFechamento)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DataFechamento)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ValorCarteira)
-        </dt>
-        <dd class="col-sm-10">
-            @{string parameterValue = @Html.FormatValue(Model.ValorCarteira, "{0:C}"); }
-            @Html.DisplayFor(modelItem => parameterValue)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TotalRecebido)
-        </dt>
-        <dd class="col-sm-10">            
-            @{parameterValue = @Html.FormatValue(Model.TotalRecebido, "{0:C}"); }
-            @Html.DisplayFor(modelItem => parameterValue)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PorcentagemReferenteAoMes)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.PorcentagemReferenteAoMes)%
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Voltar para  a Lista</a>
+    <div>
+        <h4>Provento</h4>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.DataFechamento)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.DataFechamento)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.ValorCarteira)
+            </dt>
+            <dd class="col-sm-10">
+                @{string parameterValue = @Html.FormatValue(Model.ValorCarteira, "{0:C}"); }
+                @Html.DisplayFor(modelItem => parameterValue)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.TotalRecebido)
+            </dt>
+            <dd class="col-sm-10">
+                @{parameterValue = @Html.FormatValue(Model.TotalRecebido, "{0:C}"); }
+                @Html.DisplayFor(modelItem => parameterValue)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.PorcentagemReferenteAoMes)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.PorcentagemReferenteAoMes)%
+            </dd>
+        </dl>
+    </div>
+    <div>
+        <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+        <a asp-action="Index">Voltar para  a Lista</a>
+    </div>
 </div>
