--- a/Views/Investimentos/Delete.cshtml
+++ b/Views/Investimentos/Delete.cshtml
@@ -3,76 +3,78 @@
 @{
     ViewData["Title"] = "Delete";
 }
+<div class="container">
 
-<h1>Deletar</h1>
+    <h1>Deletar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Investimento</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Corretora)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Corretora.Descricao)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Empresa)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Empresa.Nome)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Data)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Data)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Tipo)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Tipo)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Quantidade)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Quantidade)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.PrecoCompra)
-        </dt>
-        <dd class="col-sm-10">
-            @{string parameterValue = @Html.FormatValue(Model.PrecoCompra, "{0:C}"); }
-            @Html.DisplayFor(modelItem => parameterValue)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.PrecoVenda)
-        </dt>
-        <dd class="col-sm-10">
-            @{parameterValue = @Html.FormatValue(Model.PrecoVenda, "{0:C}"); }
-            @Html.DisplayFor(modelItem => parameterValue)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Corretagem)
-        </dt>
-        <dd class="col-sm-10">
-            @{parameterValue = @Html.FormatValue(Model.Corretagem, "{0:C}"); }
-            @Html.DisplayFor(modelItem => parameterValue)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DataVenda)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DataVenda)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Deletar" class="btn btn-danger" /> |
-        <a asp-action="Index">Voltar para  a Lista</a>
-    </form>
+    <h3>Tem certeza que deseja excluir este registro?</h3>
+    <div>
+        <h4>Investimento</h4>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Corretora)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Corretora.Descricao)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Empresa)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Empresa.Nome)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Data)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Data)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Tipo)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Tipo)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Quantidade)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Quantidade)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.PrecoCompra)
+            </dt>
+            <dd class="col-sm-10">
+                @{string parameterValue = @Html.FormatValue(Model.PrecoCompra, "{0:C}"); }
+                @Html.DisplayFor(modelItem => parameterValue)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.PrecoVenda)
+            </dt>
+            <dd class="col-sm-10">
+                @{parameterValue = @Html.FormatValue(Model.PrecoVenda, "{0:C}"); }
+                @Html.DisplayFor(modelItem => parameterValue)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Corretagem)
+            </dt>
+            <dd class="col-sm-10">
+                @{parameterValue = @Html.FormatValue(Model.Corretagem, "{0:C}"); }
+                @Html.DisplayFor(modelItem => parameterValue)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.DataVenda)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.DataVenda)
+            </dd>
+        </dl>
+
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="Id" />
+            <input type="submit" value="Deletar" class="btn btn-danger" /> |
+            <a asp-action="Index">Voltar para  a Lista</a>
+        </form>
+    </div>
 </div>
