--- a/Views/Proventos/Delete.cshtml
+++ b/Views/Proventos/Delete.cshtml
@@ -3,45 +3,47 @@
 @{
     ViewData["Title"] = "Delete";
 }
+<div class="container">
 
-<h1>Deletar</h1>
+    <h1>Deletar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Provento</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DataFechamento)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DataFechamento)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ValorCarteira)
-        </dt>
-        <dd class="col-sm-10">            
-            @{string parameterValue = @Html.FormatValue(Model.ValorCarteira, "{0:C}"); }
-            @Html.DisplayFor(modelItem => parameterValue)
-        </dd>
-        <dt class="col-sm-2">            
-            @{parameterValue = @Html.FormatValue(Model.TotalRecebido, "{0:C}"); }
-            @Html.DisplayFor(modelItem => parameterValue)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TotalRecebido)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PorcentagemReferenteAoMes)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.PorcentagemReferenteAoMes)%
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Deletar" class="btn btn-danger" /> |
-        <a asp-action="Index">Voltar para  a Lista</a>
-    </form>
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <h4>Provento</h4>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.DataFechamento)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.DataFechamento)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.ValorCarteira)
+            </dt>
+            <dd class="col-sm-10">
+                @{string parameterValue = @Html.FormatValue(Model.ValorCarteira, "{0:C}"); }
+                @Html.DisplayFor(modelItem => parameterValue)
+            </dd>
+            <dt class="col-sm-2">
+                @{parameterValue = @Html.FormatValue(Model.TotalRecebido, "{0:C}"); }
+                @Html.DisplayFor(modelItem => parameterValue)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.TotalRecebido)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.PorcentagemReferenteAoMes)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.PorcentagemReferenteAoMes)%
+            </dd>
+        </dl>
+
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="Id" />
+            <input type="submit" value="Deletar" class="btn btn-danger" /> |
+            <a asp-action="Index">Voltar para  a Lista</a>
+        </form>
+    </div>
 </div>
