Alterado layout dos gráficos de relatórios

--- a/Views/DataPoints/Index.cshtml
+++ b/Views/DataPoints/Index.cshtml
@@ -3,19 +3,18 @@
 }
 
 
-<div class="container">
-
-    <div style="position:relative">
-        <div id="chartValorInvestido" style="height: 370px; width:49%; position:absolute;left:0;border: 1px solid #000"></div>
-
-        <div id="chartQuantidadeAcoesEmpresa" style="height: 370px; width:49%;position:absolute; right:0;border: 1px solid #000;margin-left:10px;"></div>
+<div class="row">
+    <div class="col-md-5 col-xs-12 offset-md-1">
+        <div id="chartValorInvestido" ></div>
     </div>
-
+    <div class="col-md-5 col-xs-12">
+        <div id="chartQuantidadeAcoesEmpresa" ></div>
+    </div>
 </div>
 
-    <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
-    <script>
+<script>
 window.onload = function () {
 
     var chart = new CanvasJS.Chart("chartValorInvestido", {
@@ -61,4 +60,4 @@ window.onload = function () {
 chart.render();
 
 }
-    </script>
+</script>
