--- a/Views/Investimentos/Index.cshtml
+++ b/Views/Investimentos/Index.cshtml
@@ -29,7 +29,7 @@
 @if (Model.Count() > 0)
 {
     <p>
-        IFIX: @Model.ElementAt(0).Ifix;
+        IFIX: @Model.ElementAt(0).Ifix
     </p>
     <div style="position:relative">
         <table class="table table-bordered table-striped table-hover table-responsive">
